Season added with new trees. Some problems have been fixed, like the losing session when we destroy the forest or the elapsedTime jumps in many seconds after the break

--- a/src/app/forest-focus/focus-forest.component.scss
+++ b/src/app/forest-focus/focus-forest.component.scss
@@ -70,6 +70,7 @@ label {
 .select-box,
 .list-types {
   box-sizing: border-box;
+  z-index: 10;
 }
 
 .dropdown {
